# mac-whisper-speedtest

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mac_whisper_speedtest/: __init__.py  __main__.py  audio.py  benchmark.py  cli.py  utils.py
src/mac_whisper_speedtest/implementations/: __init__.py  base.py  coreml.py  faster.py  insanely.py  lightning.py  lightning_loader.py  mlx.py
