[project]
name = "mac-whisper-speedtest"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "An Van" },
]

requires-python = ">=3.10"
dependencies = [
    "pyaudio>=0.2.13",
    "faster-whisper>=0.10.0",
    "mlx>=0.5.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "typer>=0.9.0",
    "structlog>=24.1.0",
    "lightning-whisper-mlx>=0.0.10",
    "pywhispercpp",
    "insanely-fast-whisper>=0.0.15",
    "mlx-whisper>=0.4.2",
    "hf-xet>=1.0.3",
]


[tool.uv.sources]
pywhispercpp = { git = "https://github.com/absadiki/pywhispercpp" }

[project.scripts]
mac-whisper-speedtest = "mac_whisper_speedtest.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
